Fixing '"moderation" tab is misaligned' reported by mether(587)

--- a/askbot/skins/default/media/style/style.css
+++ b/askbot/skins/default/media/style/style.css
@@ -855,7 +855,7 @@ a:hover.medal {
     height: 20px;
     line-height: 22px;
     margin: 5px 0 0 4px;
-    padding: 0 7px;
+    padding: 0 2px;
     text-decoration: none;
 }
 
